--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,10 @@
 			<version>0.11.5</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 
 	</dependencies>
 
