--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
 			<artifactId>totp</artifactId>
 			<version>1.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
