--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.mail.username=asma.choueibi@gmail.com
 spring.mail.password=yeddtxjfmyifebuu
 spring.mail.properties.mail.smtp.auth = true 
 spring.mail.properties.mail.smtp.starttls.enable = true  
+###image upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+application.file.uploads.photos-output-path=./uploads
