--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=AnonceManag
 
-spring.datasource.url=jdbc:mysql://localhost:3306/annonce1?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/annonce1111?useUnicode=true&useJDBCCompliantTimezoneShift=true&createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,5 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=8082
+server.port=8081
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+uploadAnnonceImages=C:/xampp/htdocs/uploads/AnnonceImage
+exportAnnonceImages=http://localhost/uploads/AnnonceImage/
