--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,16 @@
 			<artifactId>tess4j</artifactId>
 			<version>4.5.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
 	</dependencies>
 
