--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
 ###Email
 spring.mail.host= smtp.gmail.com
-spring.mail.port=578
+spring.mail.port=587
 spring.mail.username=asma.choueibi@gmail.com
-spring.mail.password=yeddtxjfmyifebuu
-spring.mail.properties.mail.smtp.auth = true 
-spring.mail.properties.mail.smtp.starttls.enable = true  
+spring.mail.password=dncn tyhp clgq bjko
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 ###image upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
