--- a/pom.xml
+++ b/pom.xml
@@ -104,8 +104,9 @@
 
 		<dependency>
 			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.5.13.3</version>
+			<artifactId>itext7-core</artifactId>
+			<version>7.0.4</version>
+			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
