update lock unlock methode in user without scheduling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 application.file.uploads.photos-output-path=./uploads
