--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/eduhub_new?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://172.20.0.2/eduhub_new?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
