--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=cloudcraft
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cloudcraft
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password= root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8081
 ###### Email Properties ######
